--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* @font-face kit by Fonts2u (http://www.fonts2u.com) */ @font-face {font-family:"Free Monospaced";src:url("FreeMono.eot?") format("eot"),url("FreeMono.woff") format("woff"),url("FreeMono.ttf") format("truetype"),url("FreeMono.svg#FreeMono") format("svg");font-weight:normal;font-style:normal;}
+/* @font-face kit by Fonts2u (http://www.fonts2u.com) */ @font-face {font-family:"Free Monospaced";src:url("../fonts/FreeMono.woff") format("woff");font-weight:normal;font-style:normal;}
 
 /*Your styles*/
 
