--- a/com.creative-scripts.cstk/css/styles.css
+++ b/com.creative-scripts.cstk/css/styles.css
@@ -321,3 +321,14 @@ h3 {
     position: relative;
 }
 
+.red {color: red;}
+.green {color: green;}
+.blue {color: blue;}
+
+.highlight {
+    background: #FFB;
+    /*box-shadow: 0px 0px 5px 0px #FFB;*/
+    border-radius: 2px;
+    color: blue;
+
+}
